--- a/frontend/src/style/index.css
+++ b/frontend/src/style/index.css
@@ -8,15 +8,18 @@ body
 {
     margin-right: auto;
     margin-left: auto;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.bg-lt-hijautua {
+    background-color: #3C6544;
+}
+
+.bg-lt-kuning {
+    background-color: #F6C40C;
 }
 
 .container-login
 {
     background-color: #D7F88B;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
 }
